# R26-DS-004

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  package-lock.json  pyproject.toml
.venv-gen/: pyvenv.cfg
api/: README.md
backend/: requirements-retrieval-dense.txt  requirements.txt
docker/: README.md  docker-compose.yml
docs/: PHASE1_STRUCTURE.md  PHASE2_NEXT.md  PHASE2_PLAN.md  PHASES_RUNBOOK.md  component-b-fr5-explainability.md  component-b-income-basis.md  language-model_phase1_architecture.md
evaluation/: benchmark_seed_template.jsonl  experiment_run_template.json  phase2_task_registry.json
frontend/: .env.example  .gitignore  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
knowledge_graph/: README.md  chunk_metadata_kg_v1.json  consolidated_view_v1.json  edge_ingest_v1.json  etl_chunk_to_graph_v1.json  lex_override_paths_v1.json  lex_specialis_v1.json  nlu_entity_graph_map_v1.json  nlu_intent_graph_map_v1.json  node_embeddings_v1.json  ontology_v1.json  requirements-neo4j.txt
migration/: README.md
models/: requirements-ml.txt
nlu/: README.md
reasoning/: README.md
retrieval/: README.md
scripts/: anonymize_profiles_for_release.py  compose_tax_opt_b_rules.py  compute_node_embeddings_bundle.py  export_heuristic_mentions_edges.py  export_kg_etl_preview.py  extract_ir_pdf_text.py  generate_reference_matched_profiles.py  generate_synthetic_profiles.py  init_db.py  ird_corpus_lib.py  ird_corpus_sqlite.py  ird_extract_html.py  ird_extraction_qa_report.py  ird_manifest_build_corpus.py  ird_manifest_compute_hashes.py  ird_pdf_outline.py  ird_phase1b_bootstrap.py  ird_phase1b_finalize.py  ird_write_step2_manifest.py  kg_consolidated_view_lib.py  kg_curated_edges_lib.py  kg_edges_heuristic_lib.py  kg_etl_lib.py  kg_lex_specialis_lib.py  kg_nlu_entity_map_lib.py  kg_nlu_intent_map_lib.py  kg_ontology_lib.py  (+54 more)
(+327 files in other folders)
